--- a/chr-parse/chr-parse.cabal
+++ b/chr-parse/chr-parse.cabal
@@ -33,6 +33,6 @@ library
   build-depends:
     base >=4.8 && < 5,
     uulib >=0.9 && <0.10,
-    containers >=0.5 && <0.6
+    containers >=0.5 
   hs-source-dirs:      src
   default-language:    Haskell2010
